[package]
name = "raffia"
version = "0.2.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "One parser for CSS/SCSS/Sass/Less."
repository = "https://github.com/g-plane/raffia"
license = "MIT"

[dependencies]
raffia_macro = { path = "../raffia_macro", version = "0.1" }
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = { version = "1.10", features = ["const_generics", "serde"] }

[dev-dependencies]
codespan-reporting = "0.11"
insta = { version = "1.29", features = ["glob", "ron"] }
serde_json = "1.0"

[features]
serialize = ["serde"]
