[package]
name = "raffia"
version = "0.7.2"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "One parser for CSS/SCSS/Sass/Less."
repository = "https://github.com/g-plane/raffia"
license = "MIT"
exclude = ["/tests"]

[dependencies]
raffia_macro = { path = "../raffia_macro", version = "0.1" }
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = { version = "1.13", features = ["const_generics", "serde"] }

[dev-dependencies]
codespan-reporting = "0.11"
insta = { version = "1.38", features = ["glob", "ron"] }
serde_json = "1.0"

[features]
config_serde = ["serde"]
serialize = ["serde"]
