[package]
name = "raffia"
version = "0.12.0"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "One parser for CSS/SCSS/Sass/Less."
repository = "https://github.com/g-plane/raffia"
license = "MIT"
exclude = ["/tests"]

[dependencies]
raffia_macro = { path = "../raffia_macro", version = "0.2" }
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = { version = "1.15", features = ["const_generics"] }

[dev-dependencies]
codespan-reporting = "0.13"
insta = { version = "1.46", features = ["glob", "ron"] }
serde_json = "1.0"

[features]
config_serde = ["serde"]
serialize = ["serde", "smallvec/serde"]
span_ignored_eq = []
variant_helpers = []
