[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "WebAssembly build of Raffia."
repository = "https://github.com/g-plane/raffia"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = "1.0"
serde-wasm-bindgen = "0.4"
raffia = { path = "../raffia", features = ["config_serde", "serialize"] }
wasm-bindgen = "=0.2.81"
